# brief-ai-assistant

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  sample_brief.txt
config/: criteria.yaml
data/projects_examples/: project_1.txt  project_ai_platform.txt  project_chat.txt  project_health.txt  project_shop.txt
src/brief_evaluator/: __init__.py  __main__.py  cli.py  config.py  logger.py  models.py  pipeline.py  protocols.py
src/brief_evaluator/evaluator/: __init__.py  stub.py
src/brief_evaluator/extractor/: __init__.py  stub.py
src/brief_evaluator/llm/: __init__.py  base.py  ollama.py  openrouter.py  stub.py  yandex.py
src/brief_evaluator/mvp_suggester/: __init__.py  stub.py
src/brief_evaluator/question_generator/: __init__.py  stub.py
src/brief_evaluator/rag/: bert_retriever.py  retriever.py
src/brief_evaluator/response_writer/: __init__.py  stub.py
tests/: conftest.py  test_cli.py  test_config.py  test_models.py  test_pipeline.py
