[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brief-evaluator"
version = "0.1.0"
description = "AI assistant for evaluating briefs against technical specifications (ТЗ)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0,<3.0.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    "uuid-utils>=0.1.0",
    "streamlit>=1.28.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
brief-evaluator = "brief_evaluator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
